# OpenCL

./: .gitignore  CMakeLists.txt  README.md  README.md.
Bsort/: Bsort.cpp  Bsort.hpp  CMakeLists.txt
apps/: Bsort_run.cpp  CMakeLists.txt  bitonic_run.cpp
apps/bitonic_run/: CMakeLists.txt  bitonic_run.cpp
include/: Bitonic_app.hpp  OpenCL_app.hpp  input.hpp  program_options.hpp  test_generator.hpp
prikoli/: OclApp.hpp  temp.cpp
source/: CMakeLists.txt  bitonic_sort.cpp
source/bitonic_sort/: CMakeLists.txt  bitonic_sort.cpp
tests/: Bsort_test.cpp  CMakeLists.txt  bitonic_test.cpp
tests/bitonic_test/: CMakeLists.txt  bitonic_test.cpp
